Revamped combat system